@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.2
+13-10-2019	Revise METAL_forestplot() adding dplyr_rsid()
 07-10-2019	Add mhtplot2d() for 2D Manhattan plot
 02-09-2019	Fix numerical issues and log_p= option for cs()
 24-08-2019	Reverse compatibility with R 3.3.1 by changing family to family_ in pfc.f
